--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   path_provider: ^1.1.0
   flutter_auth_buttons: ^0.5.0
-  firebase_core: ^0.4.0
-  google_sign_in: ^4.0.1+3
-  firebase_auth: ^0.11.0
+  google_sign_in: 
+  firebase_auth: 0.10.0
 
 
 dev_dependencies:
